--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/env": "^5.0.3",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "mysql2": "^3.16.0"
