--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
     "@fastify/env": "^5.0.3",
+    "@fastify/static": "^9.0.0",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
