--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "exceljs": "^4.4.0",
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
+    "mercadopago": "^2.11.0",
     "mysql2": "^3.16.0"
   }
 }
