--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "mercadopago": "^2.11.0",
-    "mysql2": "^3.16.0"
+    "mysql2": "^3.16.0",
+    "xlsx": "^0.18.5"
   }
 }
